--- a/app/views/index.html
+++ b/app/views/index.html
@@ -253,24 +253,29 @@
 
                   <br>
                   <li>
-                    <a href="/interested-party/v1/guidance" class="govuk-link--no-visited-state">
+                    <a href="/interested-party/v2/guidance" class="govuk-link--no-visited-state">
                       Guidance for commenting on an appeal
                     </a>
                   </li>
                   <li>
-                    <a href="/interested-party/v2/appeal-search" class="govuk-link--no-visited-state">
-                      Search for an appeal
+                    <a href="/interested-party/v2/appeal-search-reference" class="govuk-link--no-visited-state">
+                      Search for an appeal with an appeal number
                     </a>
                   </li>
-
-                  <!-- <li>
-                    <a href="/interested-party/v2/appeal-search-results">
-                      Appeal results
-                    </a>
-                  </li> -->
                   <li>
                     <a href="/interested-party/v2/appeal-search-no-results" class="govuk-link--no-visited-state">
                       No results
+                    </a>
+                  </li>
+                  <li>
+                    <a href="/interested-party/v2/appeal-search-address?version=address-filter" class="govuk-link--no-visited-state">
+                      Search for an appeal with an address
+                    </a>
+                  </li>
+
+                  <li>
+                    <a href="/interested-party/v2/appeal-select-address">
+                      Select the site address
                     </a>
                   </li>
                   <li>
