--- a/app/views/interested-party/v1/appeal-search.html
+++ b/app/views/interested-party/v1/appeal-search.html
@@ -44,7 +44,7 @@
             For example, 1234567
           </p>
 
-          <input class="govuk-input govuk-input--width-10" id="appeal-code-input" name="appeal-code" type="number">
+          <input class="govuk-input govuk-input--width-10" id="appealCode-input" name="appealCode" type="number">
 
         </div>
 
