--- a/app/views/interested-party/v2/appeal-search-no-results.html
+++ b/app/views/interested-party/v2/appeal-search-no-results.html
@@ -4,7 +4,7 @@
 {% set serviceName = "Appeal a planning decision" %}
 {% set subServiceName = "Comment on an appeal" %}
 
-{% set title = "Search for an appeal" %}
+{% set title = "No appeals matching that number" %}
 
 {% block pageTitle %}
   {{ title }} - {{serviceName}} - GOV.UK
@@ -39,7 +39,7 @@
     </p>
 
     <p class="govuk-body">
-      Go back and <a href="appeal-search" class="govuk-link govuk-link--no-visited-state">search for another appeal</a>.
+      Go back and <a href="appeal-search-reference" class="govuk-link govuk-link--no-visited-state">search for another appeal</a>.
     </p>
 
   </div>
