--- a/app/views/interested-party/v2/appeal-search-reference.html
+++ b/app/views/interested-party/v2/appeal-search-reference.html
@@ -39,12 +39,16 @@
             {{ title }}
           </label>
 
+          <p class="govuk-body">
+            This can be found on the appeal notification letter.
+          </p>
+
           <p class="govuk-hint">
             <!-- For example, 1234567 or BS1 6PN -->
             For example, 1234567
           </p>
 
-          <input class="govuk-input govuk-input--width-10" id="appeal-code-input" name="appeal-code" type="number">
+          <input class="govuk-input govuk-input--width-10" id="appealCode-input" name="appealCode" type="number">
 
         </div>
 
