--- a/app/views/interested-party/v2/guidance.html
+++ b/app/views/interested-party/v2/guidance.html
@@ -131,10 +131,9 @@
         </div>
       </details>
 
-
       {{ govukButton({
         classes: "govuk-!-margin-top-5",
-        href: "appeal-search",
+        href: "appeal-search-reference",
         text: "Continue"
       }) }}
 
