--- a/app/views/interested-party/v2/householder-appeal-first-notice-letter.html
+++ b/app/views/interested-party/v2/householder-appeal-first-notice-letter.html
@@ -42,15 +42,15 @@ Dear [IP NAME]Site detailsSite Address:[INSERT HERE]Description of development:[
     </p> -->
 
     <p class="govuk-body">
-      <strong>Appeal site:</strong><br>
-      22 Avenue Grove<br>
-      Somerset<br>
-      BS72 7YS
+      <strong>Appeal reference:</strong><br>
+      0172631
     </p>
 
     <p class="govuk-body">
-      <strong>Appeal reference:</strong><br>
-      0172631
+      <strong>Appeal site:</strong><br>
+      1 Aubrey House
+      Aubrey Road
+      Bristol BS3 3EX
     </p>
 
     <!-- <p class="govuk-body">This will be decided by written representations.</p> -->
