--- a/app/views/interested-party/v2/appeal-details.html
+++ b/app/views/interested-party/v2/appeal-details.html
@@ -6,10 +6,14 @@
 {% set serviceName = "Appeal a planning decision" %}
 {% set subServiceName = "Comment on an appeal" %}
 
-{% if data['appeal-code'] %}
-  {% set title = "Appeal "+data['appeal-code'] %}
+{% if data['appealCode'] != true %}
+  {% set appealCode = "0172631" %}
+{% endif %}
+
+{% if data['appealCode'] %}
+  {% set title = "Appeal "+data['appealCode'] %}
 {% else %}
-  {% set title = "Appeal number 1234567" %}
+  {% set title = "Appeal number 0172631" %}
 {% endif %}
 
 {% block pageTitle %}
@@ -78,9 +82,7 @@
           </dt>
           <dd class="govuk-summary-list__value">
             <p>
-              22 Avenue Grove<br>
-              Somerset<br>
-              BS72 7YS
+              {{ data['site-address'] }}
             </p>
           </dd>
         </div>
