--- a/app/views/interested-party/v2/appeal-search-reference.html
+++ b/app/views/interested-party/v2/appeal-search-reference.html
@@ -39,13 +39,12 @@
             {{ title }}
           </label>
 
-          <p class="govuk-body">
+          <!-- <p class="govuk-body">
             This can be found on the appeal notification letter.
-          </p>
+          </p> -->
 
           <p class="govuk-hint">
-            <!-- For example, 1234567 or BS1 6PN -->
-            For example, 1234567
+            This can be found on the appeal notification letter. For example, 1234567
           </p>
 
           <input class="govuk-input govuk-input--width-10" id="appealCode-input" name="appealCode" type="number">
@@ -54,7 +53,7 @@
 
         <!-- link to go to address lookup -->
         <p class="govuk-body">
-          Or <a href="appeal-search-address?version=address-filter">
+          Or <a href="appeal-search-address?version=">
             search for an appeal using the site address
           </a>
         </p>
