UR links for last sprint and setup of v13 appeal submission

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -41,8 +41,8 @@
 
                   <div class="govuk-inset-text govuk-!-margin-top-0">
                     {{ govukTag({
-                      classes: "govuk-tag--green govuk-!-margin-bottom-3",
-                      text: "Ready for UR"
+                      classes: "govuk-tag--blue govuk-!-margin-bottom-3",
+                      text: "Done"
                     }) }}
                     <h3 class="govuk-heading-m govuk-!-margin-bottom-3">
                       Version 12 - Full appeal submission
@@ -60,13 +60,22 @@
                       <li>
                         <a href="/appellant-submission/v12/skip/full-task-list">Start from task list</a>
                       </li>
-                      <!--li>
-                        <a href="/appellant-submission/v12/skip/full-non-determinaton-task-list">Start from full appeal task list (non-determination)</a>
-                      </li-->
                       <li>
                         <a href="/appellant-submission/v12/skip/full-check-answers">Start from check your answers</a>
                       </li>
                     </ul>
+                    <details class="govuk-details govuk-!-margin-bottom-0" data-module="govuk-details">
+                      <summary class="govuk-details__summary">
+                        <span class="govuk-details__summary-text">
+                          User research (1)
+                        </span>
+                      </summary>
+                      <div class="govuk-details__text">
+                        <ul class="govuk-list govuk-list-bulleted">
+                          <li><a href="https://miro.com/app/board/o9J_lnPE2TA=/?moveToWidget=3458764516591934481&cot=14" target="_blank">Agents and appellants UR analysis</a></li>
+                        </ul>
+                      </div>
+                    </details>
                     <details class="govuk-details" data-module="govuk-details">
                       <summary class="govuk-details__summary">
                         <span class="govuk-details__summary-text">
@@ -1002,8 +1011,8 @@
                     <h3 class="govuk-heading-m">
                       Statement of case v1
                       {{ govukTag({
-                        classes: "govuk-tag--green govuk-!-margin-left-1",
-                        text: "Ready for UR"
+                        classes: "govuk-tag--blue govuk-!-margin-left-1",
+                        text: "Done"
                       }) }}
                     </h3>
                     <ul class="govuk-list govuk-list--bullet">
@@ -1023,7 +1032,7 @@
                       </li>
                     </ul>
 
-                    <!--details class="govuk-details govuk-!-margin-bottom-0" data-module="govuk-details">
+                    <details class="govuk-details govuk-!-margin-bottom-0" data-module="govuk-details">
                       <summary class="govuk-details__summary">
                         <span class="govuk-details__summary-text">
                           User research (1)
@@ -1032,11 +1041,11 @@
                       <div class="govuk-details__text">
                         <ul class="govuk-list govuk-list--bullet">
                           <li>
-                            <a href="https://miro.com/app/board/o9J_llyHSqU=/?moveToWidget=3074457367196007929&cot=14" target="blank" title="">User research notes (Miro)</a>
+                            <a href="https://miro.com/app/board/o9J_lnPE2TA=/?moveToWidget=3458764516592113588&cot=14" target="blank" title="">Statement of case research findings</a>
                           </li>
                         </ul>
                       </div>
-                    </details-->
+                    </details>
 
                     <details class="govuk-details govuk-!-margin-bottom-0" data-module="govuk-details">
                       <summary class="govuk-details__summary">
@@ -1075,8 +1084,8 @@
                     <h3 class="govuk-heading-m">
                       Final comments v1
                       {{ govukTag({
-                        classes: "govuk-tag--green govuk-!-margin-left-1",
-                        text: "Ready for UR"
+                        classes: "govuk-tag--blue govuk-!-margin-left-1",
+                        text: "Done"
                       }) }}
                     </h3>
                     <ul class="govuk-list govuk-list--bullet">
@@ -1102,7 +1111,7 @@
                       </li>
                     </ul>
 
-                    <!--details class="govuk-details govuk-!-margin-bottom-0" data-module="govuk-details">
+                    <details class="govuk-details govuk-!-margin-bottom-0" data-module="govuk-details">
                       <summary class="govuk-details__summary">
                         <span class="govuk-details__summary-text">
                           User research (1)
@@ -1111,11 +1120,11 @@
                       <div class="govuk-details__text">
                         <ul class="govuk-list govuk-list--bullet">
                           <li>
-                            <a href="https://miro.com/app/board/o9J_llyHSqU=/?moveToWidget=3074457367196007929&cot=14" target="blank" title="">User research notes (Miro)</a>
+                            <a href="https://miro.com/app/board/o9J_lnPE2TA=/?moveToWidget=3458764516592113823&cot=14" target="blank" title="">Final comments research findings</a>
                           </li>
                         </ul>
                       </div>
-                    </details-->
+                    </details>
 
                     <details class="govuk-details govuk-!-margin-bottom-0" data-module="govuk-details">
                       <summary class="govuk-details__summary">
