--- a/app/views/lpa-questionnaire/fullv2/task-list.html
+++ b/app/views/lpa-questionnaire/fullv2/task-list.html
@@ -69,7 +69,7 @@
             <li class="app-task-list__item">
               <span class="app-task-list__task-name">
                 <a href="procedure-type/decided-by" class="govuk-link">
-                  Review the procedure type
+                  Recommend a procedure for this appeal
                 </a>
               </span>
               {% if data["lpaq-"+version+"-taskliststatus-proceduretype"] == "Complete" %}
