--- a/app/views/index.html
+++ b/app/views/index.html
@@ -41,6 +41,57 @@
 
                   <div class="govuk-inset-text govuk-!-margin-top-0">
                     {{ govukTag({
+                      classes: "govuk-tag--red govuk-!-margin-bottom-3",
+                      text: "wip"
+                    }) }}
+                    <h3 class="govuk-heading-m govuk-!-margin-bottom-3">
+                      Version 13 - Full appeal submission
+                    </h3>
+                    <ul class="govuk-list govuk-list--bullet">
+                      <!--li>
+                        <a href="/appellant-submission/v13/costs-guidance/overview">Guidance - Claim planning appeal costs</a>
+                      </li><br>
+                      <li>
+                        <a href="/appellant-submission/v13/">Start from 'Before you start'</a>
+                      </li>
+                      <li>
+                        <a href="/appellant-submission/v13/skip/full-bys-cya">Start from check your answers in 'Before you start'</a>
+                      </li><br-->
+                      <li>
+                        <a href="/appellant-submission/v13/skip/full-task-list">Start from task list</a>
+                      </li>
+                      <li>
+                        <a href="/appellant-submission/v13/skip/full-check-answers">Start from check your answers</a>
+                      </li>
+                    </ul>
+                    <!--details class="govuk-details govuk-!-margin-bottom-0" data-module="govuk-details">
+                      <summary class="govuk-details__summary">
+                        <span class="govuk-details__summary-text">
+                          User research (1)
+                        </span>
+                      </summary>
+                      <div class="govuk-details__text">
+                        <ul class="govuk-list govuk-list-bulleted">
+                          <li><a href="https://miro.com/app/board/o9J_lnPE2TA=/?moveToWidget=3458764516591934481&cot=14" target="_blank">Agents and appellants UR analysis</a></li>
+                        </ul>
+                      </div>
+                    </details-->
+                    <details class="govuk-details" data-module="govuk-details">
+                      <summary class="govuk-details__summary">
+                        <span class="govuk-details__summary-text">
+                          Jira Tickets (1)
+                        </span>
+                      </summary>
+                      <div class="govuk-details__text">
+                        <ul class="govuk-list govuk-list-bulleted">
+                          <li><a href="https://pins-ds.atlassian.net/browse/AS-4086" target="_blank">AS-4086 Revert to getting plans from appellant</a></li>
+                        </ul>
+                      </div>
+                    </details>
+                  </div>
+
+                  <div class="govuk-inset-text govuk-!-margin-top-0">
+                    {{ govukTag({
                       classes: "govuk-tag--blue govuk-!-margin-bottom-3",
                       text: "Done"
                     }) }}
@@ -610,7 +661,7 @@
             <div class="govuk-accordion__section-header">
               <h2 class="govuk-accordion__section-heading">
                 <span class="govuk-accordion__section-button" id="accordion-default-heading-lpaq">
-                  LPA questionnaire
+                  LPD questionnaire
                 </span>
               </h2>
             </div>
@@ -626,7 +677,7 @@
                       text: "Ready for UR"
                     }) }}
                     <h3 class="govuk-heading-m govuk-!-margin-bottom-3">
-                      Full planning LPA questionnaire - Version 2
+                      Full planning LPD questionnaire - Version 2
                     </h3>
                     <ul class="govuk-list govuk-list--bullet">
                       <li>
@@ -698,6 +749,7 @@
                           <li><a href="https://pins-ds.atlassian.net/browse/AS-4257" target="_blank">AS-4257 Content and question updates for non-determination</a></li>
                           <li><a href="https://pins-ds.atlassian.net/browse/AS-4268" target="_blank">AS-4268 Shutter screen if questionnaire already submitted</a></li>
                           <li><a href="https://pins-ds.atlassian.net/browse/AS-4269" target="_blank">AS-4269 Full questionnaire magic link flow</a></li>
+                          <li><a href="https://pins-ds.atlassian.net/browse/AS-4372" target="_blank">AS-4372 Field and content change (Inquiry - expected days)</a></li>
                         </ul>
                       </div>
                     </details>
