Updates to LPD questionnaire v2 skip links

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -762,7 +762,7 @@
                       text: "Done"
                     }) }}
                     <h3 class="govuk-heading-m govuk-!-margin-bottom-3">
-                      Full planning LPA questionnaire - Version 1
+                      Full planning LPD questionnaire - Version 1
                     </h3>
                     <ul class="govuk-list govuk-list--bullet">
                       <li>
